# the-rest-is-us

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  com.therestofus.podcast.plist  feed.xml  pyproject.toml  state.json
docs/: hn-ai-podcast-design.md
docs/superpowers/specs/: 2026-04-11-intro-outro-music-design.md  2026-04-11-natural-conversation-design.md
scripts/: rhythm_analyze.py  run-daily.sh  tts_ab_test.py
scripts/rhythm/: __init__.py  _script_parse.py  aggregate.py  download.py  energy.py  metrics.py  report.py  structure.py  transcribe.py
src/hn_signal/: audio.py  collect.py  config.py  enrich.py  main.py  models.py  prompts.py  publish.py  script.py  state.py  tts_elevenlabs.py  tts_gemini.py
src/hn_signal/sources/: __init__.py  _rss.py  _util.py  arstechnica.py  arxiv.py  hn.py  lab_blogs.py  techcrunch.py  venturebeat.py
